[project]
name = "scalinglawsquantization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "absl-py>=2.3.1",
    "accelerate>=1.8.1",
    "ai2-olmo-eval>=0.8.5",
    "autopep8>=2.3.2",
    "datasets>=4.0.0",
    "device-smi>=0.4.1",
    "filelock>=3.18.0",
    "hf-transfer>=0.1.9",
    "llmcompressor>=0.6.0",
    "logbar>=0.0.4",
    "matplotlib>=3.10.5",
    "optimum>=1.26.1",
    "random-word>=1.0.13",
    "scikit-learn>=1.7.1",
    "tiktoken>=0.9.0",
    "tokenicer>=0.0.4",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "transformers>=4.53.2",
    "wandb>=0.21.0",
]

[dependency-groups]
dev = [
    "ai2-olmo>=0.6.0",
    "ruff>=0.12.10",
]
